unpackaged/main/default/objects/litify_pm__lit_AT_Global_Settings__c/litify_pm__lit_AT_Global_Settings__c.object-meta.xml
<CustomObject>
    <description>Activity Timeline Global Settings</description>
    <label>AT Global Settings</label>
    <nameField>
        <label>AT Global Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AT Global Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>