unpackaged/main/default/objects/litify_pm__lit_AT_Global_Settings__c/fields/litify_pm__lit_Clip_Overflow_Text__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Clip_Overflow_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clip (vs Wrap) overflow text in the Activity Timeline.</description>
    <label>Clip Overflow Text</label>
    <type>Checkbox</type>
</CustomField>