unpackaged/main/default/objects/litify_pm__lit_AT_Global_Settings__c/fields/litify_pm__lit_Default_Number_of_Records_to_Load__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Default_Number_of_Records_to_Load__c</fullName>
    <description>The default maximum number of records to load initially when an Activity Timeline is loaded.</description>
    <label>Default Number of Records to Load</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>