unpackaged/main/default/objects/litify_pm__lit_AT_Global_Settings__c/fields/litify_pm__lit_Show_Records_With_Blank_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Show_Records_With_Blank_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show or hide records where the date field is null</description>
    <label>Show Records With Blank Date</label>
    <type>Checkbox</type>
</CustomField>